project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-deployment
  labels:
    app: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
        - name: project-container
          image: project-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8001
          volumeMounts:
            - name: cache-volume
              mountPath: /app/shared
      volumes:
        - name: cache-volume
          persistentVolumeClaim:
            claimName: shared-storage-claim
      restartPolicy: Always
