project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: project.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: project-svc
                port:
                  number: 1234
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: project-svc
                port:
                  number: 1235
